--- a/style/style.css
+++ b/style/style.css
@@ -1,27 +1,41 @@
+.body { 
+	background-color: #F1F1F1;
+}
+
 .search-bar { 
 	margin: 20px;
-	text-align: center;
+	text-align: right;
+	
 }
 
 .search-bar input {
-	width: 75%;
+	width: 50%;
 }
 
+.search-bar h2 {
+	display: inline-block;
+	text-align: left;
+	padding-right: 400px;
+}
 .video-item img {
 	max-width: 64px;
 }
+
 
 .video-detail .details {
 	margin-top: 10px;
 	padding: 10px;
 	border: 1px solid #ddd;
 	border-radius: 4px;
+	background-color: white;
 }
 
 .list-group-item {
 	cursor: pointer;
 }
 
+
+
 .list-group-item:hover {
-	background-color: #eee;
+	background-color: #e3f6f7 ;
 }
